[tool.poetry]
name = "number-of-1-bits-0191"
version = "0.1.0"
description = ""
authors = ["codeanish <anish@codeanish.com>"]
readme = "README.md"
packages = [{include = "number_of_1_bits_0191"}]

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
