[tool.poetry]
name = "valid-parentheses-0020"
version = "0.1.0"
description = ""
authors = ["codeanish <anish@codeanish.com>"]
readme = "README.md"
packages = [{include = "valid_parentheses_0020"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
